Fix layout issue by side effect in CSS

--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -1,4 +1,4 @@
-.container form {
+.container-devise form {
   max-width: 330px;
   margin: 0 auto;
 }
